# iroh-http

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PR_350_REMEDIATION_AUDIT.md  README.md  deno.json  deny.toml  package-lock.json  package.json
.agents/skills/analyze-git-diff/: SKILL.md
.agents/skills/analyze-git-diff/agents/: openai.yaml
.agents/skills/analyze-git-diff/scripts/: git_diff_report.py  test_git_diff_report.py
.agents/skills/fix-issues/: SKILL.md
.agents/skills/fix-issues/agents/: openai.yaml
.agents/skills/manage-issues/: SKILL.md
.agents/skills/manage-issues/agents/: openai.yaml
.agents/skills/manage-issues/references/: agent-brief.md
.agents/skills/regression-first/: SKILL.md
.agents/skills/regression-first/agents/: openai.yaml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: bench.yml  build.yml  ci.yml  coverage.yml  extended-tests.yml  publish.yml
bench/deno/: report.ts
bench/node/: bench-bridge.mjs  bench-shared-layer.mjs  report.mjs
bench/rust-serde-spike/: Cargo.toml
bench/rust-serde-spike/benches/: deno_fetch_serde.rs
bench/rust-serde-spike/src/: lib.rs
crates/iroh-http-adapter/: Cargo.toml  README.md
crates/iroh-http-adapter/src/: lib.rs
crates/iroh-http-core/: README.md
crates/iroh-http-core/benches/: channel.rs
crates/iroh-http-core/src/: addr.rs  crypto.rs  encoding.rs  error.rs  lib.rs
crates/iroh-http-core/src/endpoint/: bind.rs  config.rs  dns_nameservers.rs  ffi_bridge.rs  lifecycle.rs  mod.rs  observe.rs  scoped_dns_compat.rs  session_runtime.rs  source_scoped_lookup.rs  stats.rs  transport.rs
crates/iroh-http-core/src/ffi/: dispatcher.rs  fetch.rs  handles.rs  pumps.rs  session.rs
crates/iroh-http-core/src/http/: client.rs
crates/iroh-http-core/src/http/server/: accept.rs  handle.rs  lifecycle.rs  mod.rs  options.rs  pipeline.rs  stack.rs
crates/iroh-http-core/src/http/transport/: pool.rs
crates/iroh-http-core/tests/: architecture.rs  endpoint.rs  http_accept_guards.rs  http_pool.rs  http_pure_fetch.rs  http_pure_service.rs  http_self_fetch.rs  http_shutdown.rs  lifecycle_recovery.rs  observe.rs  resilience.rs  security_repros.rs  serve_restart.rs  session_alpn.rs  session_webtransport.rs  ticket.rs
crates/iroh-http-discovery/: Cargo.toml  README.md
crates/iroh-http-discovery/examples/: advertise.rs
crates/iroh-http-discovery/src/: address_lookup.rs  dns_sd.rs  lib.rs
crates/iroh-http-discovery/src/engine/: advertise.rs  browse.rs  mod.rs  session.rs  transport.rs  types.rs
crates/iroh-http-discovery/tests/: dns_sd_interop.rs
data/v0.5.0/: deno-latency.json  deno-throughput.json  meta.json  node-latency.json  node-throughput.json  rust-latency.json  rust-throughput.json
data/v0.5.1/: deno-latency.json  deno-throughput.json  meta.json  node-latency.json  node-throughput.json  rust-latency.json  rust-throughput.json
data/v0.5.2/: deno-latency.json  deno-throughput.json  meta.json  node-latency.json  node-throughput.json  rust-latency.json  rust-throughput.json
data/v0.6.0/: deno-latency.json  deno-throughput.json  meta.json  node-latency.json  node-throughput.json  rust-latency.json  rust-throughput.json
data/v0.6.1/: deno-latency.json  deno-throughput.json  meta.json  node-latency.json  node-throughput.json  rust-latency.json  rust-throughput.json
docs/: README.md  api-overview.md  architecture.md  build-and-test.md  specification.md  threat-model.md  troubleshooting.md  tuning.md
docs/adr/: 009-ffi-bridge-reliability.md  012-benchmark-infrastructure.md  013-lean-on-the-ecosystem.md  015-self-requests-loopback.md  016-general-dns-sd-surface.md  016-mdns-discovery-scope.md  017-standard-dns-sd-discovery.md  018-general-dns-sd-surface.md  019-source-scoped-discovery-lifecycle.md
docs/features/: README.md  discovery.md  server-limits.md  sign-verify.md  streaming.md
docs/guidelines/: javascript.md  mobile-mdns-setup.md  tauri.md
docs/internals/: README.md  core-performance-exploration-2026-06.md  dns-sd-device-verification.md  dns-sd-refactor-behavior-contract.md  http-engine.md  resource-handles.md
docs/recipes/: reverse-ingress.md  schema-negotiation.md
examples/deno/: deno.jsonc  main.ts
examples/node/: index.ts  package-lock.json  package.json
examples/tauri/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/tauri/src/: main.ts  peer-picker.ts  peer-registry.ts  styles.css  test-mode-discovery.ts
examples/tauri/src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
examples/tauri/src-tauri/capabilities/: default.json
examples/tauri/src-tauri/src/: lib.rs
examples/tauri/test/: peer-registry.test.ts  test-mode-discovery.test.ts
scripts/: README.md  check-release-version.sh  check.sh  extract-release-notes.sh  release.sh  sync-package-lock-workspaces.mjs  version.sh
scripts/lib/: ci-churn.sh
scripts/tests/: ci-churn.test.sh  extract-release-notes.test.sh  release-version.test.sh  sync-package-lock-workspaces.test.mjs
tests/: README.md  run-all.sh
tests/http-compliance/: assertions.mjs  cases.json  client.deno.ts  client.mjs  handler.mjs  harness.mjs  run-deno.ts  run-node.mjs  run-tauri.ts  runner.ts  server.deno.ts
tests/interop/: run-deno.ts  run-node.mjs  suite.mjs  suite.test.mjs
tests/interop/reporter/: collector.mjs  server.mjs  server.test.mjs
tests/runners/: deno.ts  node.mjs  tauri.ts
tests/suites/: adapter-validation.mjs  discovery.mjs  keys.mjs  lifecycle.mjs  self-fetch.mjs  stress.mjs
tests/tauri-app/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  wdio.conf.js
tests/tauri-app/e2e/specs/: compliance.e2e.js
tests/tauri-app/src/: main.ts
tests/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tests/tauri-app/src-tauri/capabilities/: default.json
tests/tauri-app/src-tauri/src/: lib.rs  main.rs
