[workspace]
resolver = "2"
members = [
    "crates/iroh-http-core",
    "crates/iroh-http-discovery",
    "crates/iroh-http-adapter",
    "packages/iroh-http-node",
    "packages/iroh-http-deno",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/momics/iroh-http"

[workspace.dependencies]
iroh = "1.0"
iroh-mdns-address-lookup = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
bytes = "1"
slab = "0.4"
hyper = { version = "1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["limit", "timeout", "load-shed", "util"] }
tower-http = { version = "0.7" }
moka = { version = "0.12", features = ["future"] }
slotmap = "1"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Fast builds for CI tests — skip LTO, allow parallel codegen.
[profile.ci]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
