[package]
name = "iroh-http-adapter"
version.workspace = true
edition.workspace = true
description = "Shared adapter utilities for iroh-http (error serialization for the FFI boundary)"
license.workspace = true
repository.workspace = true

[dependencies]
iroh-http-core = { path = "../iroh-http-core", version = "0.5.2" }
serde_json = "1"
