[package]
name = "iroh-http-discovery"
version.workspace = true
edition.workspace = true
description = "Optional mDNS peer discovery for iroh-http (desktop platforms)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/iroh-http-discovery"
keywords = ["iroh", "p2p", "mdns", "discovery", "peer-to-peer"]
categories = ["network-programming"]

[features]
default = ["mdns"]
mdns = ["dep:iroh-mdns-address-lookup"]

[dependencies]
iroh = { workspace = true }
iroh-mdns-address-lookup = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
