[package]
name = "iroh-http-discovery"
version.workspace = true
edition.workspace = true
description = "Optional mDNS peer discovery for iroh-http (desktop platforms)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/iroh-http-discovery"
keywords = ["iroh", "p2p", "mdns", "discovery", "peer-to-peer"]
categories = ["network-programming"]

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd", "dep:n0-future", "dep:base32"]

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
# Standard DNS-SD (RFC 6763) mDNS: emits PTR + SRV + TXT + A/AAAA so Apple
# mDNSResponder (iOS `NWBrowser`) and Android `NsdManager` can discover desktop
# nodes. Replaces the previous swarm-discovery-based lookup, which omitted the
# PTR record and was therefore invisible to those browsers. See ADR / issue #329.
mdns-sd = { version = "0.20", optional = true }
# `BoxStream` / `stream::once` for the in-process `AddressLookup` impl that feeds
# discovered peers back to iroh's dialer. Pinned to the version iroh 1.0.x uses.
n0-future = { version = "0.3", optional = true }
# Node ids are lowercase RFC 4648 base32 (no padding) throughout iroh-http — a
# 52-char label that fits a DNS-SD instance name, unlike iroh's 64-char hex
# `Display`. Same encoding used by `iroh-http-core`.
base32 = { version = "0.5", optional = true }

[dev-dependencies]
# The `advertise` example and interop test drive a real endpoint and wait on
# Ctrl-C / timeouts.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
# The interop test derives a node's expected base32 DNS-SD label to match it
# against discovery events.
base32 = "0.5"
