[workspace]

[package]
name = "iroh-http-tauri-example"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-iroh-http = { path = "../../../packages/iroh-http-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Route iroh's `tracing` output to Android logcat so connectivity/relay/discovery
# logs are visible via `adb logcat`. Desktop uses the `fmt` layer (stdout).
[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

