[workspace]

[package]
name = "iroh-http-tauri-tests"
version = "0.0.0"
description = "Tauri host app for running iroh-http compliance suites under WebDriver"
authors = ["momics"]
edition = "2021"
publish = false

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows,
# see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_http_tauri_tests_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-iroh-http = { path = "../../../packages/iroh-http-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
